--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main":"index.js",
   "engines": {
-    "node":">=19.9.0"
+    "node":"18.x"
   },
   "scripts": {
     "start": "node ./app.js"
