--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "job tracker",
   "version": "0.0.0",
   "private": true,
-  "main":"index.js",
+  "main": "index.js",
   "engines": {
-    "node":"18.x"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node ./app.js"
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
