--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node ./app.js"
+    "start": "nodemon ./app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
